--- a/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
+++ b/src/Updater/AppUpdaterFramework/AppUpdaterFramework.csproj
@@ -17,6 +17,10 @@
 		<PackageReference Include="Microsoft.Bcl.HashCode" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
+		<!--<PackageReference Include="Nullable" Version="1.3.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>-->
 		<PackageReference Include="Semver" Version="3.0.0" />
 		<PackageReference Include="Vanara.PInvoke.RstrtMgr" Version="4.1.1" PrivateAssets="build;compile" />
 		<PackageReference Include="IsExternalInit" Version="1.0.3">
