--- a/src/Updater/ExternalUpdater/ExternalUpdater.csproj
+++ b/src/Updater/ExternalUpdater/ExternalUpdater.csproj
@@ -2,8 +2,10 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFrameworks>net48;net9.0-windows</TargetFrameworks>
+		<TargetFrameworks>net48</TargetFrameworks>
 		<RootNamespace>AnakinRaW.ExternalUpdater</RootNamespace>
+		
+		<!-- Changing this affects ExternalUpdaterConstants.cs also! -->
 		<AssemblyName>AnakinRaW.ExternalUpdater</AssemblyName>
 	</PropertyGroup>
 
