--- a/src/AnakinApps/ApplicationBase/ApplicationBase.csproj
+++ b/src/AnakinApps/ApplicationBase/ApplicationBase.csproj
@@ -38,6 +38,6 @@
 		<ProjectReference Include="..\..\Updater\ExternalUpdater.CLI\ExternalUpdater.CLI.csproj" />
 	</ItemGroup>
 
-	<Import Project="..\ApplicationConstants\ApplicationConstants.projitems" Label="Shared" />
+	<Import Project="..\ApplicationBase.Shared\ApplicationBase.Shared.projitems" Label="Shared" />
 
 </Project>
