--- a/src/AnakinApps/ApplicationManifestCreator/ApplicationManifestCreator.csproj
+++ b/src/AnakinApps/ApplicationManifestCreator/ApplicationManifestCreator.csproj
@@ -34,6 +34,6 @@
 	  <ProjectReference Include="..\..\Updater\AppUpdaterFramework.Manifest\AppUpdaterFramework.Manifest.csproj" />
 	</ItemGroup>
 
-	<Import Project="..\ApplicationConstants\ApplicationConstants.projitems" Label="Shared" />
+	<Import Project="..\ApplicationBase.Shared\ApplicationBase.Shared.projitems" Label="Shared" />
 
 </Project>
