--- a/src/AnakinApps/FtpUploader/FtpUploader.csproj
+++ b/src/AnakinApps/FtpUploader/FtpUploader.csproj
@@ -27,7 +27,7 @@
 	  <ProjectReference Include="..\..\Updater\AppUpdaterFramework.Manifest\AppUpdaterFramework.Manifest.csproj" />
 	</ItemGroup>
 
-	<Import Project="..\ApplicationConstants\ApplicationConstants.projitems" Label="Shared" />
+	<Import Project="..\ApplicationBase.Shared\ApplicationBase.Shared.projitems" Label="Shared" />
 
 
 </Project>
