--- a/src/AnakinApps/ApplicationBase.CLI/ApplicationBase.CLI.csproj
+++ b/src/AnakinApps/ApplicationBase.CLI/ApplicationBase.CLI.csproj
@@ -23,6 +23,10 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="IndexRange" Version="1.0.3" Condition="$(TargetFramework) == 'netstandard2.0'">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
